--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "test": "react-scripts test",
     "lint": "npm run lint:fix && npm run format",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write ./**/*.{ts,tsx,css,md,json} --config ./.prettierrc.json"
+    "format": "prettier --write ./**/*.{ts,tsx,css,md,json} --config ./.prettierrc.json",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -42,6 +44,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.36.1",
+    "gh-pages": "^5.0.0",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
     "typescript-eslint": "^8.6.0"
