--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shop_team_107",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mariiasuper.github.io/shop_team_107/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
