--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gh-pages": "^5.0.0",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
-    "typescript-eslint": "^8.6.0"
+    "typescript-eslint": "^8.6.0",
+    "sass": "^1.72.0"
   }
 }
