--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,8 @@ jobs:
       - name: Build the React app
         run: npm run build
         env:
-          PUBLIC_URL: https://mariiasuper.github.io/shop_team_107
+          PUBLIC_URL: 'https://${GITHUB_REPOSITORY_OWNER}.github.io/${REPO_NAME}'
+          CREATE_REACT_APP_BASENAME: '${REPO_NAME}'
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
