--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,11 +28,16 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Generate GitHub Pages URL
+        run: |
+          REPO_NAME=${GITHUB_REPOSITORY#*/}
+          GITHUB_PAGES_URL="https://${GITHUB_REPOSITORY_OWNER}.github.io/${REPO_NAME}"
+          CREATE_REACT_APP_BASENAME="${REPO_NAME}"
+          echo "GitHub Pages URL: $GITHUB_PAGES_URL"
+          echo "CREATE_REACT_APP_BASENAMEL: $CREATE_REACT_APP_BASENAME"
+
       - name: Build the React app
         run: npm run build
-        env:
-          PUBLIC_URL: 'https://${GITHUB_REPOSITORY_OWNER}.github.io/${REPO_NAME}'
-          CREATE_REACT_APP_BASENAME: '${REPO_NAME}'
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
