--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,11 +30,11 @@ jobs:
 
       - name: Build the React app
         run: |
-          REPO_NAME=${GITHUB_REPOSITORY}
-          GITHUB_PAGES_URL="https://${GITHUB_REPOSITORY_OWNER}.github.io/${REPO_NAME}"
+          REPO_NAME=${GITHUB_REPOSITORY#*/}
+          PUBLIC_URL="https://${GITHUB_REPOSITORY_OWNER}.github.io/${REPO_NAME}"
           CREATE_REACT_APP_BASENAME="${REPO_NAME}"
-          echo "GitHub Pages URL: $GITHUB_PAGES_URL"
-          echo "CREATE_REACT_APP_BASENAMEL: $CREATE_REACT_APP_BASENAME"
+          echo "GitHub Pages URL: $PUBLIC_URL"
+          echo "CREATE_REACT_APP_BASENAME: $REPO_NAME"
           npm run build
 
       - name: Upload artifact
