st-32: setup action to deploy to github pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,9 +33,12 @@ jobs:
           REPO_NAME=${GITHUB_REPOSITORY#*/}
           PUBLIC_URL="https://${GITHUB_REPOSITORY_OWNER}.github.io/${REPO_NAME}"
           CREATE_REACT_APP_BASENAME="${REPO_NAME}"
-          echo "GitHub Pages URL: $PUBLIC_URL"
+          echo "PUBLIC_URL: $PUBLIC_URL"
           echo "CREATE_REACT_APP_BASENAME: $REPO_NAME"
           npm run build
+        env:
+          PUBLIC_URL: 'https://${GITHUB_REPOSITORY_OWNER}.github.io/${GITHUB_REPOSITORY#*/}'
+          CREATE_REACT_APP_BASENAME: '${GITHUB_REPOSITORY#*/}'
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
