st-32: setup action to deploy to github pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,11 +30,8 @@ jobs:
 
       - name: Build the React app
         run: |
-          REPO_NAME=${GITHUB_REPOSITORY#*/}
-          PUBLIC_URL="https://${GITHUB_REPOSITORY_OWNER}.github.io/${REPO_NAME}"
-          CREATE_REACT_APP_BASENAME="${REPO_NAME}"
           echo "PUBLIC_URL: $PUBLIC_URL"
-          echo "CREATE_REACT_APP_BASENAME: $REPO_NAME"
+          echo "CREATE_REACT_APP_BASENAME: $CREATE_REACT_APP_BASENAME"
           npm run build
         env:
           PUBLIC_URL: 'https://${GITHUB_REPOSITORY_OWNER}.github.io/${GITHUB_REPOSITORY#*/}'
