st-33: create header component (#11)
* st-33: create header component

* work with header

* create header and menu with all routes

---------

Co-authored-by: Vasyl Chukhrai <wasik1995@mail.com>
Co-authored-by: Mari Andrushko <kap.mebel.a@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "бензиновий",
         "газовий",
         "генератора",
-        "статті"
+        "статті",
+        "Roboto"
     ],
     "cSpell.language": "en,uk"
 }
