--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
+    "i18next": "^23.16.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.3",
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
